# NuggetVPN

./: CONTRIBUTING.md  README.md  package.json
.github/workflows/: release.yml  test.yml
src/: global.css
src-tauri/: Cargo.toml  cache.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddModal.svelte  Onboarding.svelte
src/routes/: +layout.ts  +page.svelte
