[package]
name = "nuggetvpn"
version = "0.2.1"
description = "A Tauri App"
authors = ["Rigby Foundation"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nuggetvpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.21"
url = "2.5"
urlencoding = "2.1.3"
tempfile = "3.10"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user"] }
